# network_middleware

./: .gitignore  CMakeLists.txt  README.md  _client.c  _funcHeader.txt  _input.c  _msg.c  _server.c  config.c  config.h  config.txt  exec.c  fork.c  full.c  fully_connected_helpers.c  print.c  star_client.c  star_serv.c  tcp_client.c  tcp_server.c
_final/: _background.c  _testText.c  config.txt  mw_internal.c  mw_internal.h  mw_public.c  mw_public.h  network_middleware.h  testCon.c
_final/examples/: _movieRating.c  movieRatingConfig.txt
_final/ringExamples/: _movieRating.c
_final/test/: _connTest.c  _fullyTest.c  _matrixMulti.c  _ringTest.c  _starTest.c  _testText.c  ringTestConfig.txt
circleTest/: _app.c  config.txt
fullyConnected/include/: fully_connected.h  fully_connected_connect.h  fully_connected_helpers.h  fully_connected_listen.h
fullyConnected/src/: config.c  fully_connected.c  fully_connected_connect.c  fully_connected_listen.c  fully_connected_test.c
oneAppTest/: _app.c  _background.c  _middleware.c  _middleware.h
